testsuite/serd-tests/bad/bad-uri-scheme-start-wide.nt
<http://example.org/s> <http://example.org/p> <σhttp://example.org/o> .
